# semgrep

./: Makefile  Readme.md  Semgrep.hs  all.do  default.do  semgrep.cabal  test.c  test.js  test.py
src/: Main.hs  Semgrep.hs
src/Semgrep/Languages/: C.hs  Generic.hs  Javascript.hs  Python.hs
