name:           Semgrep
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple

executable semgrep
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:     base >= 4
                   , language-c
                   , syb
                   , language-python >= 0.4 && < 0.5
                   , pretty
                   , MissingH
                   , language-javascript == 0.5.1
  ghc-options:     -W

